@@ -68,6 +68,11 @@ NSString *filenameByFixingIllegalCharacters(NSString *string)
     return filename;
 }
 
+#if COMPILER(CLANG)
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
+#endif
+
 CFStringEncoding stringEncodingForResource(Handle resource)
 {
     short resRef = HomeResFile(resource);
@@ -110,3 +115,6 @@ CFStringEncoding stringEncodingForResource(Handle resource)
     return encoding;
 }
 
+#if COMPILER(CLANG)
+#pragma clang diagnostic pop
+#endif
