@@ -93,6 +93,11 @@ using namespace WebCore;
     return WebCFAutorelease(WKCopyCFLocalizationPreferredName(NULL));
 }
 
+#if COMPILER(CLANG)
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
+#endif
+// FIXME: Rewrite this in terms of -[NSURL URLByResolvingBookmarkData:…].
 static NSString *pathByResolvingSymlinksAndAliases(NSString *thePath)
 {
     NSString *newPath = [thePath stringByResolvingSymlinksInPath];
@@ -118,6 +123,9 @@ static NSString *pathByResolvingSymlinksAndAliases(NSString *thePath)
 
     return newPath;
 }
+#if COMPILER(CLANG)
+#pragma clang diagnostic pop
+#endif
 
 - (id)initWithPath:(NSString *)pluginPath
 {
