@@ -216,6 +216,11 @@ static bool getPluginInfoFromPropertyLists(CFBundleRef bundle, PluginModuleInfo&
     return true;    
 }
 
+#if COMPILER(CLANG)
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
+#endif
+
 class ResourceMap {
 public:
     explicit ResourceMap(CFBundleRef bundle)
@@ -283,6 +288,10 @@ static bool getStringListResource(ResID resourceID, Vector<String>& stringList) 
 
     return true;
 }
+
+#if COMPILER(CLANG)
+#pragma clang diagnostic pop
+#endif
 
 static const ResID PluginNameOrDescriptionStringNumber = 126;
 static const ResID MIMEDescriptionStringNumber = 127;
