@@ -1,3 +1,12 @@
+2011-11-17  Mark Rowe  <mrowe@apple.com>
+
+        <http://webkit.org/b/72646> Disable deprecation warnings around code where we cannot easily
+        switch away from the deprecated APIs.
+
+        Reviewed by Sam Weinig.
+
+        * Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm:
+
 2011-11-19  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r100834.
