@@ -1,3 +1,14 @@
+2011-11-17  Mark Rowe  <mrowe@apple.com>
+
+        <http://webkit.org/b/72646> Disable deprecation warnings around code where we cannot easily
+        switch away from the deprecated APIs.
+
+        Reviewed by Sam Weinig.
+
+        * platform/mac/WebCoreNSStringExtras.mm:
+        * platform/network/cf/SocketStreamHandleCFNet.cpp:
+        (WebCore::SocketStreamHandle::reportErrorToClient):
+
 2011-11-19  Kevin Ollivier  <kevino@theolliviers.com>
 
         [wx] C++ bindings build fix for move of array classes to WTF.
